--- a/mock.html
+++ b/mock.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
 <style>
+    [id^="maindiv"] {
+        position: absolute;
+        z-index: 9;
+        background-color: #f1f1f1;
+        text-align: center;
+        border: 1px solid #d3d3d3;
+    }
+
+    [id^="divheader"]{
+        padding: 10px;
+        cursor: move;
+        z-index: 10;
+        background-color: #2196F3;
+        color: #fff;
+    }
     #addtable {
         padding: 10px;
         cursor: crosshair;
@@ -12,8 +27,17 @@
 <body>
 
 <h1>Draggable DIV Element</h1>
-<p>Click below to add another table</p>
-<div id="addtable">Click here</div>
+
+<label for="colNames">Insert columns headers separated with ";"</label><br/>
+<input type="text" id="colNames" name="cols"><br/>
+<label for="rowCount">number of rows</label><br/>
+<input type="text" id="rowCount" default="3">
+
+<button type="button" onclick="firstStepCreateDiv3()">Add table</button>
+
+<br/>
+<br/>
+<div id="addtable">Click here to add example table</div>
 <p>Click and hold the mouse button down while moving the DIV element</p>
 <link href="https://unpkg.com/frappe-datatable@0.0.5/dist/frappe-datatable.min.css" rel="stylesheet">
 <!-- include the dependencies -->
@@ -26,7 +50,6 @@
 
 <script>
     //Make the DIV element draggagle:
-    var tmp = document.querySelector(".data-table-row td[data-is-header='1']")
 
     function dragElement(elmnt) {
         var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
@@ -68,32 +91,40 @@
             document.onmousemove = null;
         }
     }
-        function firstStepCreateDiv(){document.getElementById("addtable").style.backgroundColor = "red";
-            document.getElementById("addtable").style.backgroundColor = "green";
-            let nextIndex = getNextIndex();
-            let div = document.createElement("div");
-            div.id = "#div" +nextIndex;
-            div.style.position = "absolute";
-            div.style.zIndex = "9";
-            div.style.backgroundColor = "#f1f1f1";
-            div.style.textAlign = "center";
-            div.style.border = "1px solid #d3d3d3";
-            let div1 = document.createElement("div");
-            div1.id = "#divheader" +nextIndex;
-            div1.textContent = "Click here to move"
-            div1.style.padding = "10px";
-            div1.style.cursor = "move";
-            div1.style.zIndex = "10";
-            div1.style.backgroundColor = "#2196F3";
-            div1.style.color = "#fff";
-            let div2 = document.createElement("div");
-            div2.id="#datatable"+nextIndex;
-            div.appendChild(div1);
-            div.appendChild(div2);
-            dragElement(div);
-            document.body.appendChild(div);
-            createTable(div2);
-        }
+
+    function firstStepCreateDiv(){document.getElementById("addtable").style.backgroundColor = "red";
+        let nextIndex = getNextIndex();
+        let div = document.createElement("div");
+        div.id = "maindiv" +nextIndex;
+        let div1 = document.createElement("div");
+        div1.id = "divheader" +nextIndex;
+        div1.textContent = "Click here to move"
+        let div2 = document.createElement("div");
+        div2.id="#datatable"+nextIndex;
+        div.appendChild(div1);
+        div.appendChild(div2);
+        dragElement(div);
+        document.body.appendChild(div);
+        createTable(div2);
+    }
+    function firstStepCreateDiv3(){
+        let cols=document.getElementById("colNames").value;
+        let rows=document.getElementById("rowCount").value;
+        let colsarray=cols.split(";");
+        let nextIndex = getNextIndex();
+        let div = document.createElement("div");
+        div.id = "maindiv" +nextIndex;
+        let div1 = document.createElement("div");
+        div1.id = "divheader" +nextIndex;
+        div1.textContent = "Click here to move"
+        let div2 = document.createElement("div");
+        div2.id="#datatable"+nextIndex;
+        div.appendChild(div1);
+        div.appendChild(div2);
+        dragElement(div);
+        document.body.appendChild(div);
+        createTable3(div2,colsarray,rows);
+    }
     var index = 0;
     function getNextIndex(){
         index = index +1;
@@ -105,12 +136,127 @@
             data: [
                 ['123', 'Software Developer', '$1200'],
                 ['321', 'Software Engineer', '$1400'],
-            ]
+            ],
+            headerDropdown:[{
+                label: 'Add Column',
+                action: function () {
+                    addColumn(this , "New Column");
+                }
+            },
+                {
+                    label: 'Remove column',
+                    action: function (column) {
+                        this.removeColumn(column.colIndex);
+                    }
+                },
+                {
+                    label: 'Add row',
+                    action: function () {
+                        addRow(this);
+                    }
+                },
+                {
+                    label: 'Remove row',
+                    action: function () {
+                        removeRow(this);
+                    }
+                }]
         });
     }
-        document.getElementById("addtable").onclick = function () {
-            firstStepCreateDiv();
+    function createTable3(div,colsarray,rows=3){
+        let rowscount=parseInt(rows);
+        if(!Number.isInteger(rowscount)){
+            rowscount=3;
+        }
+        let rowsdata=[];
+        for(let j=0;j<rowscount;j++) {
+            const newdata =new Array(colsarray.length);
+            var newdata2=newdata.fill("   ");
+            rowsdata.push(newdata2);
+        }
+        return new DataTable(div, {
+
+            columns: colsarray,
+            data: rowsdata,
+            headerDropdown:[{
+                label: 'Add Column',
+                action: function () {
+                    addColumn(this , "New Column");
+                }
+            },
+                {
+                    label: 'Remove column',
+                    action: function (column) {
+                        this.removeColumn(column.colIndex);
+                    }
+                },
+                {
+                    label: 'Add row',
+                    action: function () {
+                        addRow(this);
+                    }
+                },
+                {
+                    label: 'Remove row',
+                    action: function () {
+                        removeRow(this);
+                    }
+                }]
+        });
     }
+    function removeRow(div){
+        let columns = div.getColumns();
+        let rows = div.getRows();
+        let col =[];
+        let row =[];
+        let colcount=columns.length;
+        for(let j=1;j<colcount;j++){
+            col.push(columns[j]);
+        }
+        let rowscount=rows.length;
+        for(let j=0;j<rowscount-1;j++){
+            row.push(rows[j].slice(1));
+        }
+        div.refresh(row, col);
+    }
+
+    function addRow(div){
+        let columns = div.getColumns();
+        let rows = div.getRows();
+        let col =[];
+        let row =[];
+        let colcount=columns.length;
+        for(let j=1;j<colcount;j++){
+            col.push(columns[j]);
+        }
+        let rowscount=rows.length;
+        for(let j=0;j<rowscount;j++){
+            row.push(rows[j].slice(1));
+        }
+        row.push(rows[1].slice(1).fill("   "))
+        div.refresh(row, col);
+    }
+
+    function addColumn(div, Name){
+        let columns = div.getColumns();
+        let rows = div.getRows();
+        let col =[];
+        let row =[];
+        let colcount=columns.length;
+        for(let j=1;j<colcount;j++){
+            col.push(columns[j]);
+        }
+        let rowscount=rows.length;
+        for(let j=0;j<rowscount;j++){
+            row.push(rows[j].slice(1));
+        }
+        col.push(Name);
+        div.refresh(row, col);
+    }
+    document.getElementById("addtable").onclick = function () {
+        firstStepCreateDiv();
+    }
+
 </script>
 
 </body>
