--- a/new.html
+++ b/new.html
@@ -9,7 +9,7 @@
 <label for="tabName">Insert table name</label><br/>
     <input type="text" id="tabName" name="name"><br/>
 
-<label for="colNames">Insert columns headers separated with ";"</label><br/>
+<label for="colNames">Insert columns headers separated with ";", first inputs, then outputs:</label><br/>
     <input type="text" id="colNames" name="cols">
     <input type="text" id="argNames" name="args"><br/>
 
