--- a/new.html
+++ b/new.html
@@ -35,6 +35,7 @@ table names to connect:<br/>
 
 
 
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
 <style>
@@ -51,7 +52,7 @@ table names to connect:<br/>
             <path d="M 0 0 L 10 5 L 0 10 z" />
         </marker>
     </defs>
-    <g id="gsvg" fill="none" stroke="black" stroke-width="2" marker-end="url(#arrowhead)">
+    <g id="gsvg" fill="none" stroke="black" stroke-width="1" marker-end="url(#arrowhead)">
         <path id="newArrow"/>
     </g>
 </svg>
@@ -73,6 +74,7 @@ table names to connect:<br/>
 <script src="onenter.js"></script>
 <script src="connection.js"></script>
 <script src="json.js"></script>
+<script src="addListeners.js"></script>
 
 </body>
 </html>
