--- a/new.html
+++ b/new.html
@@ -26,8 +26,10 @@
 <button type="button" id="import" onclick="allFromJson()">upload .jason file</button>
 <br/>
 <p>Hold blue element do drag table</p>
-
-
+<br>
+<button type="button" id="undo" onclick="undo()">undo</button>
+<button type="button" id="redo" onclick="redo()">redo</button>
+<br/>
 
 
 
@@ -70,6 +72,7 @@
 <script src="connection.js"></script>
 <script src="json.js"></script>
 <script src="addListeners.js"></script>
+<script src="history.js"></script>
 <script >var tabletable={};
 var jsonResult={};
 arrindex=0;</script>
